--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -55,6 +55,8 @@
 
 \newcommand{\derstep}[2]{\mathsf{DerStep}[ #1, #2 ]}
 
+\newcommand{\dersubtrees}[1]{\mathsf{DerSubTrees}[ #1 ]}
+
 \newcommand{\dertrees}[1]{\mathsf{DerTrees}[ #1 ]}
 
 \newcommand{\evalrules}{\mathsf{EvalRules}}
