--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -85,6 +85,8 @@
 
 \newcommand{\interps}[1]{\mathsf{Interps[ #1 ]}}
 
+\newcommand{\invsof}[1]{\mathsf{Invs}[ #1 ]}
+
 \newcommand{\isind}{\mathsf{IsInd}}
 
 \newcommand{\issat}{\textsc{IsSat}\xspace}
@@ -115,7 +117,11 @@
 
 \newcommand{\relsof}[1]{\mathsf{Rels}_{#1}}
 
+\newcommand{\sinkof}[1]{\mathsf{sink}[ #1 ]}
+
 \newcommand{\solvechc}{\textsc{SolveCHC}\xspace}
+
+\newcommand{\srcof}[1]{\mathsf{src}[ #1 ]}
 
 \newcommand{\stepclauses}{\mathsf{Step}}
 
@@ -135,11 +141,13 @@
 
 \newcommand{\symvarsidx}[2]{\mathsf{SymVarsIdx}[ #1, #2 ]}
 
+\newcommand{\tiles}{\mathsf{Tiles}}
+
 \newcommand{\tilings}[2]{\mathsf{Tilings}[ #1, #2 ]}
 
 \newcommand{\types}{\mathsf{Types}}
 
-\newcommand{\unwind}{\textsc{Unwind}\xspace}
+\newcommand{\unwind}[1]{\textsc{Unwind}[ #1 ]\xspace}
 
 \newcommand{\values}{\mathsf{Values}}
 
