--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -19,7 +19,7 @@
 
 \newcommand{\chcs}[1]{\mathsf{CHCs}[ #1 ]}
 
-\newcommand{\chkindaux}{\textsc{ChkIndAux}\xspace}
+\newcommand{\chkindaux}{\textsc{CAux}\xspace}
 
 \newcommand{\chkinductive}{\textsc{ChkInd}\xspace}
 
@@ -45,7 +45,7 @@
 
 \newcommand{\derschc}{\textsc{DersCHC}\xspace}
 
-\newcommand{\dersexps}[1]{\mathsf{Exps}[ #1 ]}
+\newcommand{\dersexps}[2]{\mathsf{Exps}[ #1 ]( #2 )}
 
 \newcommand{\dersinvs}[2]{\mathsf{DersInvs}[ #1, #2 ]}
 
@@ -125,6 +125,8 @@
 
 \newcommand{\stepclauses}{\mathsf{Step}}
 
+\newcommand{\stepedges}[2]{\mathsf{Step}[ #1, #2 ]}
+
 \newcommand{\stepsto}[1]{\rightarrow_{ #1 }}
 
 \newcommand{\stlc}{\mathsf{STLC}}
@@ -132,6 +134,8 @@
 \newcommand{\subcuts}[2]{\mathsf{SubCuts}[ #1, #2 ]}
 
 \newcommand{\subexps}[1]{\mathsf{SubExps}[ #1 ]}
+
+\newcommand{\subexpseqs}{\mathsf{ExpSeqs}}
 
 \newcommand{\symrels}[2]{\mathsf{SymRels}[ #1, #2 ]}
 
@@ -141,7 +145,11 @@
 
 \newcommand{\symvarsidx}[2]{\mathsf{SymVarsIdx}[ #1, #2 ]}
 
+\newcommand{\tileind}{\mathsf{ind}}
+
 \newcommand{\tiles}{\mathsf{Tiles}}
+
+\newcommand{\tilesof}[1]{\mathsf{Tiles}[ #1 ]}
 
 \newcommand{\tilings}[2]{\mathsf{Tilings}[ #1, #2 ]}
 
