overhauls defn of derivation relational invariants

--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -55,6 +55,8 @@
 
 \newcommand{\derstep}[2]{\mathsf{DerStep}[ #1, #2 ]}
 
+\newcommand{\derstructs}[2]{\mathsf{DerStructs}[ #1, #2 ]}
+
 \newcommand{\dersubtrees}[1]{\mathsf{DerSubTrees}[ #1 ]}
 
 \newcommand{\dertrees}[1]{\mathsf{DerTrees}[ #1 ]}
@@ -83,6 +85,8 @@
 
 \newcommand{\immsubtrees}[1]{\mathsf{ImmSubtrees}[ #1 ]}
 
+\newcommand{\instrules}[1]{\mathsf{InstRules}[ #1 ]}
+
 \newcommand{\interps}[1]{\mathsf{Interps[ #1 ]}}
 
 \newcommand{\invsof}[1]{\mathsf{Invs}[ #1 ]}
@@ -106,6 +110,8 @@
 \newcommand{\nonequiv}{\mathsf{NonEquiv}}
 
 \newcommand{\ops}{\mathsf{ops}}
+
+\newcommand{\preds}[1]{\mathsf{preds}[ #1 ]}
 
 \newcommand{\queryof}[1]{\mathsf{Query}_{#1}}
 
@@ -149,7 +155,7 @@
 
 \newcommand{\tiles}{\mathsf{Tiles}}
 
-\newcommand{\tilesof}[1]{\mathsf{Tiles}[ #1 ]}
+\newcommand{\tilesof}[2]{\mathsf{Tiles}[ #1, #2 ]}
 
 \newcommand{\tilings}[2]{\mathsf{Tilings}[ #1, #2 ]}
 
