--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -134,68 +134,112 @@ pairs of sequences of derivations of subexpressions of $P_0$ and $P_1$
 to relational invariants.
 %
 \begin{defn}
-  \label{defn:der-rel-invs}
+  \label{defn:der-structs}
   % nodes:
-  Let \textbf{(1)} finite space $N$, %
+  Let \textbf{(1)} $N$ be a finite space, %
   % expressions annotations:
-  \textbf{(2)} $E_0 : N \to \subexps{P_0}^{*}$, %
-  \textbf{(3)} $E_1 : N \to \subexps{P_1}^{*}$, %
   % invariants annotations:
-  \textbf{(4)} $I: N \to \relinvs{P_}{P_1}$,
-  % step edges in P0 and P1:
-  \textbf{(5) \& (6)} $S_0, S_1 \subseteq N \times \evalrules \times
-  N$, and
-  % tiling relations:
-  \textbf{(7)} $T \subseteq N \times N \times N$ be such that 
+  \textbf{(2)} $I: N \to \relinvs{P_0}{P_1}$,
+  % step edges in P0:
+  \textbf{(3)} $S_0 : N \times \instrules{P_0} \partto N$, %
+  % step edges in P1:
+  \textbf{(4)} $S_1 : N \times \instrules{P_1} \partto N$, %
+  % tilings in P0:
+  \textbf{(5)} $T_0 : N \times \subexps{P_0}^{*} \times
+  \subexps{P_0}^{*} \to N$, and
+  % tilings in P1:
+  \textbf{(6)} $T_1 : N \times \subexps{P_1}^{*} \times
+  \subexps{P_1}^{*} \to N$ be such that the following conditions
+  hold.
+  %
+  \textbf{(a)} $(N, S_0, \union S_1 \union T_1 \union T_1)$ is a
+  hyper-DAG.
+  %
+  \textbf{(b)} For each $n \in N$ and $r \in \instrules{P_0}$ such
+  that $S_0(n, r)$ is defined,
   % each E0 edge models a step of P0:
-  \textbf{(a)} for all $n, n' \in N$ and $r \in \evalrules$ such that
-  $S_0(n, r, n')$, there are $E_0^0, E_0^1 \in
-  \subexps{P_0}^{*}$, $e' \in \subexps{P_0}$, and $E_1 \in
-  \subexps{P_1}^{*}$ such that $E(n) = (E_0^0 \concat E_0^1, E_1)$,
-  $E(n') = (e' \cons E_0^1, E_1)$, and
-  %
-  \[ I(n), \symstep{ P_0 }{ r } \entails I(n')
+  \[ I(n), \symstep{ P_0 }{ r } \entails I(S_0(n, r))
   \]
-  \BH{fix vocab}
-  % each E1 edge models a step of P1:
-  \textbf{(b)} for all $n, n' \in N$ and $r \in \evalrules$ such that
-  $S_1(n, r, n')$, there are $E_0 \in \subexps{P_0}^{*}$, $e' \in
-  \subexps{P_1}$, $E_1^0, E_1^1 \in \subexps{P_1}^{*}$ such that $E(n)
-  = (E_0, E_1^0 \concat E_1^1)$, $E(n') = (E_0, e' \cons E_1^1)$, and
   %
-  \[ I(n), \symstep{ P_1 }{ r } \entails I(n') 
+  \textbf{(c)} For each $n \in N$ and $r \in \instrules{P_1}$ such
+  that $S_1(n, r)$ is defined,
+  % each E0 edge models a step of P0:
+  \[ I(n), \symstep{ P_1 }{ r } \entails I(S_1(n, r))
   \]
-  \BH{fix vocab}
-  % edges for a hyper-DAG H:
-  \textbf{(c)} $H = (N, S_0 \union S_1)$ is a hyper-DAG,
   % H has a unique source annotated with empty seqs
-  \textbf{(d)} $H$ has a unique source node $n \in N$, where $E_0(n) =
-  E_1(n) = \epsilon$ and $\true \entails I(n)$, and
+  \textbf{(d)} for each source node $n \in N$ of $H$, it holds that
+  $\true \entails I(n)$, and
   % H has a unique sink annotated with P0, P1
-  \textbf{(e)} $H$ has a unique sink node $n' \in N$, where $E_0(n') =
-  [ P_0 ]$, $E_1(n) = [ P_1 ]$, and $I(n), \alpha_0 = \alpha_1
-  \entails \nu_0 = \nu_1$, %
-  \textbf{(f)} for all $n_0, n_1, n' \in N$ such that $T(n_0, n_1,
-  n')$,
+  \textbf{(e)} $H$ has a unique sink node $n' \in N$, such that $I(n'),
+  \alpha_0 = \alpha_1 \entails \nu_0 = \nu_1$, %
+  % invariants respect entailments over decompositions:
+  \textbf{(f) \& (g)} for all $n_0, n_1, n' \in N$ such that $T_0(n_0,
+  n_1, n')$ or $T_1(n_0, n_1, n')$,
   \[ I(n_0), I(n_1) \entails I(n')
   \]
+
   %
-  \BH{fix vocab of invariants}
-  %
-  Then $(N, E, I, S_0, S_1, T)$ are \emph{derivation relational
-    invariants} of $P_0$ and $P_1$.
+  Then $(N, I, S_0, S_1, T_0, T_1)$ is a \emph{derivation structure}
+  of $P_0$ and $P_1$.
+\end{defn}
+%
+The space of derivation structures of $P_0$ and $P_1$ is denoted
+$\derstructs{P_0}{P_1}$.
+%
+For each $I \in \dersinvs{P_0}{P_1}$, the components of $I$ are
+denoted $\nodes{I}$, $\invsof{I}$, $\stepedges{P_0}{I}$,
+$\stepedges{P_1}{I}$, $\tilesof{P_0}{I}$, and $\tilesof{P_1}{I}$,
+respectively.
+%
+The sink node of $I$ is denoted $\sinkof{I}$.
+
+% derive map for derivation relational invariants:
+Some derivation structures define invariants of all evaluations of
+sequences of expressions.
+\begin{defn}
+  \label{defn:der-rel-invs}
+  % introduce components of structure:
+  Let $N$, $I : N \to \symrels{P_0}{P_1}$, %
+  $S_0 : N \times \instrules{P_0} \partto N$, %
+  $S_1 : N \times \instrules{P_1} \partto N$, %
+  $T_0 : N \times \subexps{P_0}^{*} \times \subexps{P_0}^{*} \partto
+  N$, and %
+  $T_1 : N \times \subexps{P_1}^{*} \times \subexps{P_1}^{*} \partto
+  N$ be such that $(N, I, S_0, S_1, T_0, T_1) \in
+  \derstructs{P_0}{P_1}$.
+
+  % introduce map over subexpressions of P0
+  Let there be some $E_0 : N \to \subexps{P_0}^{*}$ that satisfies the
+  following conditions.
+  % maps sink to just P0:
+  \textbf{(a)} $E_0(\sinkof{I}) = [ P_0 ]$;
+  % respects steps in P0:
+  \textbf{(b)} for each $n \in N$ and $r \in \instrules{P_1}$ such
+  that $S_0(n, r)$ is defined, and for $e_0 \in \subexps{P_0}$ and $E'
+  \in \subexps{P_0}^{*}$ such that $E_0(n) = e_0 \cons E'$, it holds
+  that $E_0( S_0(n, r) ) = \preds{r} \concat E'$;
+  % respects splits:
+  \textbf{(c)} for each $n' \in N$ and all $F_0, F_1 \in
+  \subexps{P_0}$ such that $(F_0, F_1)$ is a tiling of $E_0(n')$,
+  there is some, there are some $n_0, n_1 \in N$ such that $T_0(n',
+  F_0, F_1) = (n_0, n_1)$, with $E_0(n_0) = F_0$ and $E_0(n_1) =
+  F_1$.
+
+  % punt on expression map for P1:
+  Let there be some $E_1 : N \to \subexps{P_1}^{*}$ that is defined
+  symmetrically for $P_1$.
+
+  % give it a name:
+  Then $I$ are \emph{derivation relational invariants} of $P_0$ and
+  $P_1$.
 \end{defn}
 %
 The space of all derivation relational invariants for $P_0$ and $P_1$
 is denoted $\dersinvs{P_0}{P_1}$.
 %
-For each $I \in \dersinvs{P_0}{P_1}$, the components of $I$ are
-denoted $\nodes{I}$, $\dersexps{P_0}{I}$, $\dersexps{P_1}{I}$,
-$\invsof{I}$, $\stepedges{P_0}{I}$, $\stepedges{P_1}{I}$, and
-$\tilesof{I}$, respectively.
-%
-The source and sink nodes of $I$ are denoted $\srcof{I}$ and
-$\sinkof{I}$, respectively.
+For each $I \in \dersinvs{P_0}{P_1}$, the expression maps $E_0$ and
+$E_1$ defined in \autoref{defn:der-rel-invs} are denoted
+$\dersexps{P_0}{I}$ and $\dersexps{P_1}{I}$, respectively.
 %
 \BH{reference running example}
 
@@ -212,7 +256,7 @@ and $E_1 \in \subexps{P_1}^{*}$,
   % the invariant of the sequences of expressions is
   \exprel{I}(E_0, E_1) = %
   % the disjunction over invariants over all nodes 
-  \biglor \setformer{ I(n_0, n_1) }{ %
+  \bigland \setformer{ I(n_0, n_1) }{ %
     n_0, n_1 \in \nodes{I},
     % that are annotated with the expression sequences
     \dersexps{P_0}{I}(n_0) = E_0, \dersexps{P_1}{I}(n_1) = E_1 }
@@ -346,10 +390,51 @@ with relational invariants in both $I$ and $I'$.
 (\autoref{line:core-recurse}).
 
 % mergeinvs: combine using disjunction:
-\mergeinvs, given derivation relational invariants $I, I' \in
-\dersinvs{P_0}{P_1}$, generates 
-%
-\BH{complete}
+\mergeinvs, given derivation relational invariants $I_0, I_1 \in
+\dersinvs{P_0}{P_1}$, generates $I' \in \dersinvs{P_0}{P_1}$ that
+represent invariants of all derivations of $I_0$ and $I_1$,
+where $I'$ is constructed as follows.
+% nodes:
+Let $h : N_0 \partto N_1$ be the smallest function such that %
+\textbf{(1)} $h(\sinkof{I_0}) = \sinkof{I_1}$; %
+\textbf{(2)} for each $n_0 \in N_0$ and $n_1 \in N_1$, if \textbf{(a)}
+for each $n_0' \in N_0$ and $r \in \evalrules$ such that $S_0(n_0, r,
+n_0')$, it holds that $S_1(n_1, r, h(n_0'))$ and %
+\textbf{(b)} for each $n_0' \in N_1$ and $r \in \evalrules$ such that
+$S_1(n_1, r, n_0')$, it holds that $S_1(n_1, r, h(n_1'))$, then
+$h(n_0) = n_1$; %
+\textbf{(3)} for all $n_0, n_1, n_2 \in \domain(h)$ 
+
+% nodes:
+\textbf{(1)} Let $N' = N_0 \union N_1'$, where $N_1' = N_1 \setminus
+\range(h)$,
+% P0 expressions:
+\textbf{(2)} let $E_0' = E_0^0 \union E_0^1$, and
+% P1 expressions:
+\textbf{(3)} let $E_1' = E_1^0 \union E_1^1$.
+% invariants:
+\textbf{(4)} Let $I' : N' \to \symrels{P_0}{P_1}$ be such that %
+\textbf{(a)} for each $n \in N_0 \setminus N_1$, $I'(n) = I^0(n)$, %
+for each $n \in N_1 \setminus N_0$, $I'(n) = I^1(n)$, and %
+for each $n \in N_0 \intersection N_1$, $I'(n) = I^0(n) \lor
+I^1(n)$.
+% P0 steps: 
+\textbf{(5)} Let $S_0' = S_0^0 \union \restrict{S_0^1}{N_1'} \union
+S_0''$, where for each $n_1 \in N_1$ and $n_0 \in \domain(h)$ such
+that $S_0(n_1, h(n_0'))$, it holds that $S_0''(n_1, n_0)$.
+% P1 steps:
+\textbf{(6)} Let $S_1' = S_1^0 \union \restrict{S_1^1}{N_1'} \union
+S_1''$, where for each $n_1 \in N_1$ and $n_0 \in \domain(h)$ such
+that $S_1(n_1, h(n))$, it holds that $S_1''(n, n_1)$.
+% tilings
+\textbf{(7)} Let $T' = T_0 \union T_1$.
+
+% put it all together:
+$(N', E_0', E_1', I', S_0', S_1', T')$ are derivation relational
+invariants, and are the particular derivation relational invariants
+generated by \mergeinvs.
+
+\BH{define all components of derivation relational invariants}
 
 \subsubsection{Determining inductiveness of derivation invariants}
 \label{sec:chk-ind}
