fixes defn of relational invariants

--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -111,8 +111,6 @@
 
 \newcommand{\ops}{\mathsf{ops}}
 
-\newcommand{\preds}[1]{\mathsf{preds}[ #1 ]}
-
 \newcommand{\queryof}[1]{\mathsf{Query}_{#1}}
 
 \newcommand{\relinvs}[2]{\mathsf{RelInvs}[ #1, #2 ]}
@@ -122,6 +120,10 @@
 \newcommand{\relof}[1]{\mathsf{Rel}[ #1 ]}
 
 \newcommand{\relsof}[1]{\mathsf{Rels}_{#1}}
+
+\newcommand{\rulepreds}[1]{\mathsf{preds}[ #1 ]}
+
+\newcommand{\rulesucc}[1]{\mathsf{succ}[ #1 ]}
 
 \newcommand{\sinkof}[1]{\mathsf{sink}[ #1 ]}
 
