--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -56,41 +56,26 @@ can be taken by $P_0$ and $P_1$.
   \label{defn:rel-invs}
   Let $R_0, R_1 \in \symrels{P_0}{P_1}$ be such that %
   % condition: relation of empty sequences is entailed by true:
-  \textbf{(1)} $\true \entails R_0(\epsilon, \epsilon) \lor
-  R_1(\epsilon, \epsilon)$;
-  % condition: steps are valid:
-  \textbf{(2)} for all $e_0 \in \subexps{P_0}^{*}$, %
-  $E_0 \in \subexps{P_0}^{*}$, %
+  \textbf{(1) \& (2)} $\true \entails R_0(\epsilon, \epsilon)$ and
+  $\true \entails R_1(\epsilon, \epsilon)$;
+  % steps in P0 are valid:
+  \textbf{(2)} for all $E_0 \in \subexps{P_0}^{*}$, %
   $E_1 \in \subexps{P_1}^{*}$, and %
-  each $r \in \evalrules$ that decomposes $e_0$ to $E_0' \in
-  \subexps(P_0)^{*}$, %
-  there are some $E_0'', E_0''' \in \subexps{P_0}^{*}$ such that $E_0'
-  \concat E_0 = E_0'' \concat E_0'''$ and
-  \begin{align*}
-    R_0(E_0'' \concat E_0''', E_1), %
-    \subs{ \symstep{P_0}{ r } }{ \vars[ E_0' ], \vars[ e_0 ] } 
-    & \entails R_0(e_0 \cons E_0, E_1) \\
-    %
-    R_1(E_0'' \concat E_0''', E_1), %
-    \subs{ \symstep{P_0}{ r } }{ \vars[ E_0' ], \vars[ e_0 ] }
-    & \entails R_0(e_0 \cons E_0, E_1)
-  \end{align*}
-  % symmetric condition for P1
+  each $r \in \instrules{P_0}$, %
+  there are some $E_0', E_0'' \in \subexps{P_0}^{*}$ such that
+  $\rulepreds{r} \concat E_0 = E_0' \concat E_0''$ and
+  \[ R_0(E_0' \concat E_0'', E_1), %
+  R_1(E_0' \concat E_0'', E_1) %
+  \symstep{ P_0 }{ r } \entails R_0(\rulesucc{r} \cons E_0, E_1) \]
+  % symmetric condition for P1:
   \textbf{(3)} for all $E_0 \in \subexps{P_0}^{*}$, %
-  $e_1 \in \subexps{P_1}$, %
   $E_1 \in \subexps{P_1}^{*}$, and %
-  each $r \in \evalrules$ that decomposes $e_1$ to $E_1' \in
-  \subexps(P_1)^{*}$, %
-  there are some $E_1'', E_1''' \in \subexps{P_1}^{*}$ such that
-  $E_1' \concat E_1 = E_1'' \concat E_1'''$ and
-  \begin{align*}
-    R_0(E_0, E_1'' \concat E_0'''), %
-    \subs{ \symstep{P_1}{ r } }{ \vars[ E_0' ], \vars[ e_0 ] }
-    & \entails R_1(E_0, e_1 \cons E_1) \\
-    R_1(E_0, E_1'' \concat E_1'''), %
-    \subs{ \symstep{P_1}{ r } }{ \vars[ E_1' ], \vars[ e_1 ] }
-    & \entails R_1(E_0, e_1 \cons E_1) 
-  \end{align*}
+  each $r \in \instrules{P_1}$, %
+  there are some $E_1', E_1'' \in \subexps{P_1}^{*}$ such that
+  $\rulepreds{r} \concat E_1 = E_1' \concat E_1''$ and
+  \[ R_0(E_0, E_1' \concat E_0''), %
+  R_1(E_0, E_1' \concat E_0''), %
+  \symstep{P_1}{ r } \entails R_1(E_0, \rulesucc{r} \cons E_1) \]
   %
   Then $R_0$ and $R_1$ are \emph{relational invariants} of $P_0$ and
   $P_1$.
@@ -220,7 +205,7 @@ sequences of expressions.
   \textbf{(b)} for each $n \in N$ and $r \in \instrules{P_1}$ such
   that $S_0(n, r)$ is defined, and for $e_0 \in \subexps{P_0}$ and $E'
   \in \subexps{P_0}^{*}$ such that $E_0(n) = e_0 \cons E'$, it holds
-  that $E_0( S_0(n, r) ) = \preds{r} \concat E'$;
+  that $E_0( S_0(n, r) ) = \rulepreds{r} \concat E'$;
   % respects splits:
   \textbf{(c)} for each $n' \in N$ and all $F_0, F_1 \in
   \subexps{P_0}$ such that $(F_0, F_1)$ is a tiling of $E_0(n')$,
